<resources>
    <string name="app_name">DaLlamada</string>


    //Commons
    <string name="title">Titulo</string>
    <string name="description">Descripción</string>
    <string name="email">Email</string>
    <string name="LogIn">Iniciar Sesión</string>

    //activity_create_event
    <string name="create_event_send">Enviar evento</string>

    //activity_detailed
    <string name="detailed_hour">5 hour ago</string>
    <string name="detailed_source">Source</string>

    //activity_forgot_password
    <string name="forgot_password_title">Restablecer Contraseña</string>
    <string name="forgot_password_reset">Restablecer</string>

    //activity_forgot_password
    <string name="forgotPass_title">RESTABLECER CONTRASEÑA</string>
    <string name="forgotPass_email">Email</string>
    <string name="forgotPass_reset">Restablecer</string>
    <string name="forgotPass_back_login">Iniciar sesión</string>
    <string name="forgotPass_send_email">Correo enviado</string>


    //activity_login
    <string name="login_title">INICIO DE SESIÓN</string>
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_forgot_password">¿Olvidó su contraseña?</string>
    <string name="login_noAccount">¿No tiene cuenta?</string>
    <string name="login_signIn">INICIAR SESIÓN</string>
    <string name="login_register">Registrarse</string>


    //activity_main
    <string name="menu_profile">Perfil</string>
    <string name="menu_events">Eventos</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_news">Noticias</string>


    //activity_message
    <string name="message_send">Escribe un mensaje...</string>

    //activity_news
    <string name="news_title">Noticias</string>
    <string name="news_search">Buscar</string>


    //activity_register
    <string name="register_title">REGISTRO</string>
    <string name="register_username">Nombre de usuario</string>
    <string name="register_email">Email</string>
    <string name="register_password">Contraseña</string>
    <string name="register_repeat_password">Repita su contraseña</string>
    <string name="register_button">REGISTRARSE</string>
    <string name="register_accountAlready">¿Ya tiene cuenta?</string>
    <string name="register_signIn">Iniciar Sesión</string>
    <string name="register_succeded">Registro completado</string>

    //fragment_events
    <string name="events_create">Crear evento</string>

    //fragment_profile
    <string name="profile">Cambiar imagen de perfil</string>
    <string name="profile_change_image">Cambiar imagen de perfil</string>
    <string name="profile_my_profile">Mi perfil</string>
    <string name="profile_username">username</string>
    <string name="profile_email">email</string>
    <string name="profile_group_options">Opciones de Grupo</string>
    <string name="profile_take_a_group">Seleccione un grupo</string>
    <string name="profile_selected_group">Grupo seleccionado</string>
    <string name="profile_selected_group_data">Bienvenido</string>
    <string name="profile_introduce_a_group">Ingrese un grupo</string>
    <string name="profile_search">Buscar</string>
    <string name="profile_account_options">Opciones de Cuenta</string>
    <string name="profile_change_password">Cambiar Contraseña</string>
    <string name="profile_delete_account">Borrar Cuenta</string>
    <string name="profile_logout">Cerrar sesión</string>

    //Error
    <string name="error_empty_field">Campo requerido</string>
    <string name="error_email_not_valid">Introduza un email válido</string>
    <string name="error_user_used">Este email ya está en uso</string>
    <string name="error_password_short">La contraseña es demasiado corta, al menos 6 caracteres</string>
    <string name="error_password_not_match">Las contraseñas no coinciden</string>
    <string name="error_login_failed">El email o contraseña son incorrectos</string>
    <string name="error_register_failed">Error de registro</string>
    <string name="error_send_recover_pass_email">Error al enviar correo, compruebe el email</string>


</resources>